tests/basic/bad/test08.pepa
% File: tests/bad/test08.pepa
% Unguarded recursive use of a component (P)
% This test currently exposes a bug in ipc whereby it goes into an infinite loop
%P = (a, r).P + P;
%(P <> P)
